# FormalLanguageTheory

./: CMakeLists.txt  readme.md
common/: CMakeLists.txt
common/include/common/: asm.h  cmdline_positional_parser.h  fxtbits-set.h  fxtbits.h  logger.h  perf.h  stream-extension.h  string-extension.h
lab1/: CMakeLists.txt  main.cpp  readme.md
lab1/include/lab1/: grammar.h  multi-equation-set.h  multi-equation.h  term-grammar.h  term.h
lab1/tests/: 1  2  also_parsable_test
lab2/: CMakeLists.txt  main.cpp  readme.md
lab2/include/lab2/: regex.h  rewrite-rules.h  rule.h
lab2/tests/: 1  10  11  12  2  3  4  5  6  7  8  9
lab3/: CMakeLists.txt  main.cpp  readme.md
lab3/include/lab3/: commutative_regex.h  context_free_grammar.h  context_free_rule.h  equation.h  equations_system.h  grammar_unit.h  regex.h
lab3/tests/: 1  2  3  4  5  6
lab5/: CMakeLists.txt  documentation.tex  draft  main.cpp  readme.md
lab5/include/lab5/: attribute.h  entity.h  entity_relationship_diagram.h  relation.h
lab5/tests/: 1  draft
lab5/tests/1-result/: Cardinalities_table_of_Rel_model.csv
