cmake_minimum_required(VERSION 3.16)
project(main)
set(CMAKE_CXX_STANDARD 17)
option(BUILD  "profile to compile project" DEBUG)
if (BUILD STREQUAL DEBUG)
    add_compile_options(-ggdb -Wall -Wextra -Wstrict-aliasing -Wmissing-field-initializers -Wconversion -std=c++17 -pedantic -pthread -DDEBUG -march=native -mtune=native)
elseif(BUILD STREQUAL RELEASE)
    add_compile_options(-O3 -Wall -Wextra -fno-strict-aliasing -Wmissing-field-initializers -Wconversion -std=c++17 -pedantic -lrt -flto -fno-use-linker-plugin -fno-threadsafe-statics -fwhole-program -fvisibility=hidden -pthread -DRELEASE -march=native -mtune=native -ffast-math -fno-rtti)
endif()
add_subdirectory(common)
add_subdirectory(lab1)
